--- a/Pages/Login.razor
+++ b/Pages/Login.razor
@@ -1,7 +1,7 @@
 ﻿@page "/login"
 @using UpShift.Authentication
 @using UpShift.Controllers
-@inject UserController userController
+@inject IUserController userController
 @inject IJSRuntime js
 @inject AuthenticationStateProvider authStateProvider
 @inject NavigationManager navManager
