--- a/Pages/DetalhesLeilao.razor
+++ b/Pages/DetalhesLeilao.razor
@@ -5,7 +5,7 @@
 @inject ILeilaoController leilaoController
 @inject IUserController userController
 @inject NavigationManager navigationManager
-@inject UserController userController
+@inject IUserController userController
 @inject AuthenticationStateProvider authStateProvider
 @inject ILicitacaoController licitacaoController
 @inject IMarcaController marcaController
@@ -38,7 +38,7 @@ else
             <p><strong>Número de Portas:</strong> @veiculo.NumPortas</p>
             <p><strong>Preço Inicial:</strong> @leilao.PrecoStart€</p>
             <p><strong>Licitação Mínima:</strong> @leilao.BidMinima€</p>
-            <p><strong>LICITAÇÃO ATUAL:</strong> @licitacaoController.GetByID(leilao.IdLicitacaoAtual).Valor€</p>
+            <p><strong>LICITAÇÃO ATUAL:</strong> @(licitacaoController.GetByID(leilao.IdLicitacaoAtual) == null ? leilao.PrecoStart : licitacaoController.GetByID(leilao.IdLicitacaoAtual).Valor)€</p>
 
             <div class="my-2">
                 <button class="btn btn-primary" @onclick="UserPodeLicitar">Licitar</button>
