--- a/LI4.2/Pages/CriarLeilao.razor
+++ b/LI4.2/Pages/CriarLeilao.razor
@@ -18,8 +18,8 @@
 
     <EditForm Model="@veiculoLeilao" OnValidSubmit="Criar">
 
-        <div class="flex items-center justify-center min-h-screen">
-            <div class="grid grid-rows-2 min-h-screen space-x-8 inline-block">
+        <div class="items-center justify-center p-8">
+            <div class="grid grid-cols-2 min-h-screen space-x-8 inline-block mb-8">
 
                 <div class="dark:bg-gray-800 mb-8 p-4 px-4">
 
@@ -73,7 +73,7 @@
 
                 </div>
 
-                <div  class="dark:bg-gray-800 mb-8 p-4 px-4 inline block">
+                <div  class="dark:bg-gray-800 mb-8 p-4 px-4">
 
                     <div class="text-xl underline mb-4">Other Details</div>
 
@@ -132,7 +132,7 @@
                     </div>
                 </div>
                 
-                <div  class="dark:bg-gray-800 mb-8 p-4 px-4 inline block">
+                <div  class="dark:bg-gray-800 mb-8 p-4 px-4">
 
                     <div class="text-xl underline mb-4">Auction Details</div>
 
@@ -160,7 +160,7 @@
                 </div>
                     
 
-                <div  class="dark:bg-gray-800 mb-8 p-4 px-4 inline block">
+                <div  class="dark:bg-gray-800 mb-8 p-4 px-4">
 
                     <div class="text-xl underline mb-4">Images & Videos</div>
                     <div>
@@ -168,9 +168,16 @@
                     </div>
                 </div>
             </div>
-            <div class="my-2">
-                <button type="submit" class="btn btn-primary">Começar Leilão</button>
-            </div>    
+
+            <div class="flex item-center justify-center">
+                <button type="submit" class="mb-5 bg-blue-500 text-blue
+                            px-8 p-2 rounded-md hover:bg-blue-600 focus:outline-none
+                            focus:border-blue-700 focus:ring focus:ring-blue-200
+                            login-button mb-8 text-3xl font-bold">
+                    Start Auction
+                </button>
+            </div>
+
         </div>
 
     </EditForm>
