--- a/Pages/Tickets.razor
+++ b/Pages/Tickets.razor
@@ -16,10 +16,10 @@
                 {
                     <div class="border p-4 rounded-md">
                         <p class="font-bold">ID: @ticket.Id</p>
-                        <p>Nome: @ticket.NomeCliente</p>
-                        <p>Email: @ticket.EmailCliente</p>
-                        <p>Telefone: @ticket.TelefoneCliente</p>
-                        <p>Mensagem: @ticket.Mensagem</p>
+                        <p>Nome: @ticket.ClientName</p>
+                        <p>Email: @ticket.ClientEmail</p>
+                        <p>Telefone: @ticket.ClientPhoneNumber</p>
+                        <p>Mensagem: @ticket.Message</p>
                         <button class="bg-red-500 text-white p-2 mt-2 rounded-md" @onclick="() => DeleteTicket(ticket)">Excluir</button>
                     </div>
                 }
