--- a/Pages/CriarLeilao.razor
+++ b/Pages/CriarLeilao.razor
@@ -153,7 +153,7 @@
                     <!--End Date-->
                     <div class="form-group mb-4">
                         <label for="endDate" class="block text-sm font-medium text-gray-600">End Date</label>
-                        <InputDate id="endDate" class="text-white w-full px-4 py-2 border rounded-md focus:outline-none
+                        <InputDate Type="InputDateType.DateTimeLocal" id="endDate" class="text-white w-full px-4 py-2 border rounded-md focus:outline-none
                         focus:border-blue-500 form-box" @bind-Value="leilao.DataFinal"></InputDate>
                     </div>
                 </div>
